--- a/index.html
+++ b/index.html
@@ -44,5 +44,12 @@
     </form>
   </div>
 </nav>
+    
+    <div class="jumbotron">
+  <h1>A ROAD TO BETTER FUTURE</h1>
+  <p>A 5 weeks career transformation!</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
+    
 </body>
 </html>
