--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         
          <div class="jumbotron">
+             <a href="yoonahbae.github.io/photo_band.img.768.high.jpeg"></a>
   <h1>A ROAD TO BETTER FUTURE</h1>
   <p>A 5 weeks career transformation!</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
