--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     </head>
     
-<body>
-    <a href="yoonahbae.github.io/photo_band.img.768.high.jpeg"></a>
+<body> 
+    <img class="img-responsive" src="yoonahbae.github.io/photo_band.img.768.high.jpeg" alt="Chania">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
