--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     </form>
   </div>
 </nav>
-    <a href style="background-image:url('yoonahbae.github.io/photo_band.img.768.high.jpeg'); no-repeat"> </a>
+    <div class="bg"></div>
+
+    <p class="yoonahbae.github.io/photo_band.img.768.high.jpeg"></p>
+
      <div class="jumbotron">
              
       <h1>A ROAD TO BETTER FUTURE</h1>
