--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">CALL or TEXT 213-332-1318</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> TEXT 213-332-1318 </a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
