--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Enroll Now
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Course Info</a>
           <a class="dropdown-item" href="#">Sign-Up</a>
-          <a class="dropdown-item" href="#">Request Info</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Register</a>
+          <a class="dropdown-item" href="#">Registration</a>
         </div>
       </li>
       <li class="nav-item">
