--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Ace Care Education</a>
+  <a class="navbar-brand" href="#">ACE CARE EDU</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
