--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           Enrollment
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Course Info</a>
+          <a class="dropdown-item" href="#">Payment Plan</a>
           <a class="dropdown-item" href="#">Sign-Up</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Registration</a>
